# synapse-bot

./: .env.example  .gitignore  AGENTS.md  BANNER_FONTS.md  Dockerfile  LICENSE  Procfile  Procfile.dev  README.MD  antigravity_agent_plan.md  atomesus_test.json  atomesus_test2.json  atomesus_test3.json  firebase_config.py  main - backup.py  main.py  premium_workflow.md  pyproject.toml  railway.json  requirements.txt  setup_channel_plan.md  voice_interface_plan.md
MusicBot/: package-lock.json
MusicBot/scripts/: update-ytdlp.js
MusicBot/src/: ErrorHandler.js
backend/: .env.example  main.py
backend/cogs/: ai_chat.py  boost.py  firebase_setup.py  general.py  music.py  now_playing.py  playlist.py  queue.py  spotify_down.py  welcome.py
backend/lavalink/: application.yml
backend/scripts/: backup_firestore.py
backend/utils/: auto_responder_store.py  constants.py  firestore_stats.py  formatters.py  image_spam.py  intent_router.py  logger.py  rag_engine.py  rag_vector.py  spam_engine.py
backend/web/: web_app.py
cogs/: boost.py  donation.py  firebase_setup.py  music - backup2.py  music.py  spotify_down.py  welcome.py
frontend/pages/: base.html  boost_announce.html  landing.html  photobox.html  welcome_settings.html
frontend/templates/: actions.html  ai_chat.html  anti_spam.html  auto_responders.html  ban_settings.html  base.html  boost_announce.html  boost_settings.html  dashboard.html  donation_settings.html  footer.html  landing.html  leave_settings.html  message_builder.html  (+10 more)
scripts/: get_spotify_token.py
utils/: constants.py
web/: web_app.py
(+102 files in other folders)
