[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-discord-bot"
version = "0.1.0"
description = "Discord bot with Flask backend"
requires-python = ">=3.9"
dependencies = [
  "flask>=2.3.0",
  "gunicorn>=21.0.0"
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["backend*", "backend.*"]
exclude = ["tests*", "docs*"]

[tool.vercel]
entrypoint = "backend.web.web_app:app"
